@@ -1,4 +1,6 @@
 5.1.7 -> 5.1.8:
+    - jbj: install/use wnh:{primary,filelists,other}.yaml queryformats.
+    - jbj: use poptReadFile with retrofit for popt < 1.15.
     - devzero2000: fix --orphandirs port alias ; add --danglinglink popt alias
     - jbj: fix: eliminate a argvSplit() memory leak.
     - jbj: stub-in /usr/lib/rpm/helpers/makeshlibs proof-of-concept.
